Fix objectives section TABLET version

--- a/src/sass/layouts/_objectives.scss
+++ b/src/sass/layouts/_objectives.scss
@@ -133,7 +133,7 @@
     .one{
         grid-area: 1/1;
         display: grid;
-        grid-template-columns: max-content 60%;
+        grid-template-columns: 30% 70%;
         grid-template-rows: 50% 50%;
         margin: auto auto 40px auto;
         img{
@@ -151,13 +151,14 @@
             height: max-content;
             margin-top: auto;
             margin-bottom: auto;
+            margin-left: -24px;
         }
     }
     
     .two{
         grid-area: 2/1;
         display: grid;
-        grid-template-columns: max-content 60%;
+        grid-template-columns: 30% 70%;
         grid-template-rows: 50% 50%;
         margin: auto auto 40px auto;
         img{
@@ -175,13 +176,14 @@
             height: max-content;
             margin-top: auto;
             margin-bottom: auto;
+            margin-left: -24px;
         }
     }
     
     .three{
         grid-area: 3/1;
         display: grid;
-        grid-template-columns: max-content 60%;
+        grid-template-columns: 30% 70%;
         grid-template-rows: 50% 50%;
         margin: auto;
         img{
@@ -199,6 +201,218 @@
             height: max-content;
             margin-top: auto;
             margin-bottom: auto;
+            margin-left: -24px;
         }
     }
 }
+
+@media (min-width: 600px)and (max-width: 1024px){
+    .objectives{
+        margin-bottom: 120px;
+        background-image: url(../images/bg_objectifs.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: 100%;
+        &__title{
+            text-align: center;
+            font-size: 40px;
+            font-weight: 700;
+            margin-top: 12px;
+        }
+        &__container{
+            width: 88%;
+            margin: auto;
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: max-content max-content max-content;
+        }
+        &__numTitle{
+            color: $primary;
+            font-size: 18px;
+            font-weight: 700;
+        }
+        &__numPara{
+            font-weight: 500;
+            font-size: 14px;
+        }
+    }
+    .one{
+        grid-area: 1/1;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 50% 50%;
+        margin: auto auto 40px auto;
+        img{
+            width: 44%;
+            grid-column: 1/2;
+            grid-row: 1/3;
+            margin: auto;
+        }
+        &__container{
+            grid-row: 1/3;
+            grid-column: 2/3;
+            box-shadow: 0 0 27px 0 rgba(6,15,154,.1);
+            padding-left: 24px;
+            padding-right: 24px;
+            height: max-content;
+            margin-top: auto;
+            margin-bottom: auto;
+            margin-left: -24px;
+        }
+    }
+    
+    .two{
+        grid-area: 2/1;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 50% 50%;
+        margin: auto auto 40px auto;
+        img{
+            width: 44%;
+            grid-column: 1/2;
+            grid-row: 1/3;
+            margin: auto;
+        }
+        &__container{
+            grid-row: 1/3;
+            grid-column: 2/3;
+            box-shadow: 0 0 27px 0 rgba(6,15,154,.1);
+            padding-left: 24px;
+            padding-right: 24px;
+            height: max-content;
+            margin-top: auto;
+            margin-bottom: auto;
+            margin-left: -24px;
+        }
+    }
+    
+    .three{
+        grid-area: 3/1;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 50% 50%;
+        margin: auto;
+        img{
+            width: 44%;
+            grid-column: 1/2;
+            grid-row: 1/3;
+            margin: auto;
+        }
+        &__container{
+            grid-row: 1/3;
+            grid-column: 2/3;
+            box-shadow: 0 0 27px 0 rgba(6,15,154,.1);
+            padding-left: 24px;
+            padding-right: 24px;
+            height: max-content;
+            margin-top: auto;
+            margin-bottom: auto;
+            margin-left: -24px;
+        }
+    }    .objectives{
+        margin-bottom: 120px;
+        background-image: url(../images/bg_objectifs.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: 100%;
+        &__title{
+            text-align: center;
+            font-size: 40px;
+            font-weight: 700;
+            margin-top: 12px;
+        }
+        &__container{
+            width: 88%;
+            margin: auto;
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: max-content max-content max-content;
+        }
+        &__numTitle{
+            color: $primary;
+            font-size: 18px;
+            font-weight: 700;
+        }
+        &__numPara{
+            font-weight: 500;
+            font-size: 14px;
+        }
+    }
+    .one{
+        grid-area: 1/1;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 50% 50%;
+        margin: auto auto 40px auto;
+        img{
+            width: 44%;
+            grid-column: 1/2;
+            grid-row: 1/3;
+            margin: auto;
+        }
+        &__container{
+            grid-row: 1/3;
+            grid-column: 2/3;
+            box-shadow: 0 0 27px 0 rgba(6,15,154,.1);
+            padding-left: 24px;
+            padding-right: 24px;
+            height: max-content;
+            margin-top: auto;
+            margin-bottom: auto;
+            margin-left: -24px;
+        }
+    }
+    
+    .two{
+        grid-area: 2/1;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 50% 50%;
+        margin: auto auto 40px auto;
+        img{
+            width: 44%;
+            grid-column: 1/2;
+            grid-row: 1/3;
+            margin: auto;
+        }
+        &__container{
+            grid-row: 1/3;
+            grid-column: 2/3;
+            box-shadow: 0 0 27px 0 rgba(6,15,154,.1);
+            padding-left: 24px;
+            padding-right: 24px;
+            height: max-content;
+            margin-top: auto;
+            margin-bottom: auto;
+            margin-left: -24px;
+        }
+    }
+    
+    .three{
+        grid-area: 3/1;
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 50% 50%;
+        margin: auto;
+        img{
+            width: 44%;
+            grid-column: 1/2;
+            grid-row: 1/3;
+            margin: auto;
+        }
+        &__container{
+            grid-row: 1/3;
+            grid-column: 2/3;
+            box-shadow: 0 0 27px 0 rgba(6,15,154,.1);
+            padding-left: 24px;
+            padding-right: 24px;
+            height: max-content;
+            margin-top: auto;
+            margin-bottom: auto;
+            margin-left: -24px;
+        }
+    }
+}
+
+
+    
